--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "astro": "^4.10.2",
     "flowbite": "^2.3.0",
     "tailwindcss": "^3.4.4"
+  },
+  "devDependencies": {
+    "daisyui": "^4.12.2"
   }
 }
